# CMake_Tutorial

./: README.md
SDL2_cmake_tutorial/: CMakeLists.txt
cmake_dependency_handling_tutorial/: CMakeLists.txt
cmake_dependency_handling_tutorial/example/: CMakeLists.txt  example-a.cpp
cmake_dependency_handling_tutorial/my_library/: header-a.hpp  header-b.hpp  src-a.cpp
cmake_dependency_handling_tutorial/tool/: CMakeLists.txt
my_library/: CMakeLists.txt  src-b.cpp
